# rl_stuff

./: .gitignore  data.json  readme.md  requirements.txt
chess/: agent.py  game.py  plan.txt  player.py
finite_mdps/gamblers-problem/: agent.py
finite_mdps/n-armed-bandits/: components.py
gamblers-problem/: agent.py
huggingface_deep_rl/: readme.txt
huggingface_deep_rl/lunarlander/: agent.py  network.py  plan.txt
n-armed-bandits/: single_bandit_testbed.py
network/: transformer.py
ros_experiments/: Dockerfile
sims/: mountaincar.py  pidcontroller.py  rldriver.py
sims/locomotion/: agent.py  environment.py  network.py  plan.txt
sims/mountaincar/: rldriver.py
snake/: readme.md
tictactoe/: CMakeLists.txt  agent.h  build.sh  game.h  main.cpp  nn.h
trading/: alpaca_functions.py  main.py  readme.md  requirements.txt  trading_env.py  validation.py
wisdom-bootstrapping/: custom_rewards.py  readme.md  train.py
wisdom-bootstrapping/videos/BipedalWalker-v3/adaptive_shaping_run_10/: rl-video-episode-8.meta.json
wisdom-bootstrapping/videos/CartPole-v1/adaptive_shaping_run_10/: rl-video-episode-1.meta.json  rl-video-episode-8.meta.json
